syntax = "proto3";

package transaction;

option go_package = "github.com/andrew-pavlov-ua/proto/transaction;transaction";

import "google/protobuf/timestamp.proto";

service TransactionService {
    rpc SaveTransaction(SaveTransactionRequest) returns (SaveTransactionResponse);
}

message SaveTransactionRequest {
    string external_id = 1;
}

message SaveTransactionResponse {
    bool success = 1;
    string error = 2;
}

// Transaction event from webhook
message Transaction {
    string source = 1;           // "monobank", "privatbank"
    string external_id = 2;
    string account_id = 3;
    int64 amount = 4;            // in kopiykas/cents
    int32 currency_code = 5;     // 980 (UAH), 840 (USD)
    string description = 6;
    int32 mcc = 7;
    google.protobuf.Timestamp transaction_time = 8;
}
